feat(enum-type): questionnaire type enum define

--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -144,11 +144,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='one'>Multiple choice</mat-option>
-                    <mat-option value='two'>Image Select</mat-option>
-                    <mat-option value='two'>Yes/no</mat-option>
-                    <mat-option value='two'>Slider</mat-option>
-                    <mat-option value='two'>Vertical Select</mat-option>
+                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
+                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
+                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -259,11 +259,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='one'>Multiple choice</mat-option>
-                    <mat-option value='two'>Image Select</mat-option>
-                    <mat-option value='two'>Yes/no</mat-option>
-                    <mat-option value='two'>Slider</mat-option>
-                    <mat-option value='two'>Vertical Select</mat-option>
+                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
+                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
+                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -406,11 +406,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='one'>Multiple choice</mat-option>
-                    <mat-option value='two'>Image Select</mat-option>
-                    <mat-option value='two'>Yes/no</mat-option>
-                    <mat-option value='two'>Slider</mat-option>
-                    <mat-option value='two'>Vertical Select</mat-option>
+                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
+                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
+                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -541,11 +541,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='one'>Multiple choice</mat-option>
-                    <mat-option value='two'>Image Select</mat-option>
-                    <mat-option value='two'>Yes/no</mat-option>
-                    <mat-option value='two'>Slider</mat-option>
-                    <mat-option value='two'>Vertical Select</mat-option>
+                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
+                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
+                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
+                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
