--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -1,4 +1,18 @@
 <div class='p-4'>
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-3'>
+        <mat-form-field class='w-100'>
+          <mat-label>Search</mat-label>
+          <input [formControl]='name' matInput>
+        </mat-form-field>
+      </div>
+      <div class='col d-flex align-items-center justify-content-end'>
+        <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+      </div>
+    </div>
+  </div>
+
   <mat-card class='p-0'>
     <div class='container-fluid p-0'>
       <div class='row'>
@@ -69,10 +83,16 @@
           </table>
         </div>
       </div>
-      <div class='row mt-2'>
-        <div class='col-6 d-flex align-items-center'>
-          <mat-spinner class='ml-4' [diameter]='18' *ngIf='store.isLoading$ | async'></mat-spinner>
+      <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+      <ng-template #noDataElse>
+        <div class='row'>
+          <div class='col-12 d-flex align-items-center justify-content-center'>
+            <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+          </div>
         </div>
+      </ng-template>
+      <div class='row mt-2'>
+        <div class='col'></div>
         <div class='col-6'>
           <mat-paginator
             [disabled]='store.isLoading$ | async'
