--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -18,13 +18,13 @@
     </div>
   </div>
   <div class='container-fluid p-0'>
-    <form action=''>
+    <form >
       <div class='row mb-4 justify-content-between'>
         <div class='col-lg-5'>
           <div class='row m-0'>
             <mat-form-field class='w-100'>
               <mat-label>Questionnaire Name</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name' required>
+              <input matInput autocomplete='no' type='text'>
             </mat-form-field>
           </div>
         </div>
@@ -91,7 +91,7 @@
               Add
             </button>
             <mat-menu #add='matMenu' class='mt-2'>
-              <button mat-menu-item>
+              <button (click)='triggerQuestionType(choiceType.MULITPLE_CHOICE)'  mat-menu-item>
                 <span>Multiple Choice</span>
               </button>
               <button mat-menu-item>
@@ -113,124 +113,124 @@
 
       <!--      Multiple Choice-->
 
-        <div class='col-lg-7'>
-          <mat-card>
-            <div class='row  '>
-              <div class='col-12'>
-                <div class='d-flex justify-content-between'>
-                  <h1>Questions 1</h1>
-                  <div class='row m-0' *ngIf='showSentiment'>
-                    <div class='d-flex sentiment'>
-                      <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
-                      <h2 class='m-0 icon--success'>-3</h2>
-                    </div>
-                    <div class='d-flex sentiment'>
-                      <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
-                      <h2 class='m-0 icon--error'>-2</h2>
-                    </div>
+      <div class='col-lg-7'>
+        <mat-card>
+          <div class='row  '>
+            <div class='col-12'>
+              <div class='d-flex justify-content-between'>
+                <h1>Questions 1</h1>
+                <div class='row m-0' *ngIf='showSentiment'>
+                  <div class='d-flex sentiment'>
+                    <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                    <h2 class='m-0 icon--success'>-3</h2>
+                  </div>
+                  <div class='d-flex sentiment'>
+                    <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                    <h2 class='m-0 icon--error'>-2</h2>
                   </div>
                 </div>
               </div>
             </div>
-            <mat-divider></mat-divider>
-            <div class='row  mt-3'>
-              <div class='col-12'>
+          </div>
+          <mat-divider></mat-divider>
+          <div class='row  mt-3'>
+            <div class='col-12'>
+              <mat-form-field class='w-100'>
+                <mat-label>Questionnaire Name</mat-label>
+                <input matInput autocomplete='no' type='text' required>
+              </mat-form-field>
+            </div>
+            <div class='col-12'>
+              <mat-form-field class='w-100' appearance='fill'>
+                <mat-label>Type</mat-label>
+                <mat-select>
+                  <mat-option [value]=choiceType.MULITPLE_CHOICE>{{choiceType.MULITPLE_CHOICE}}</mat-option>
+                  <mat-option [value]=choiceType.IMAGE_SELECT>{{choiceType.IMAGE_SELECT}}</mat-option>
+                  <mat-option [value]=choiceType.SLIDER>{{choiceType.SLIDER}}</mat-option>
+                  <mat-option [value]=choiceType.VERTICLE_SELECT>{{choiceType.VERTICLE_SELECT}}</mat-option>
+                  <mat-option [value]=choiceType.YES_NO>{{choiceType.YES_NO}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class='col-12'>
+              <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
+                scoring</h4></mat-checkbox>
+            </div>
+            <div class='col-12'>
+              <div class='row m-0 mt-4 mb-2'>
                 <mat-form-field class='w-100'>
-                  <mat-label>Questionnaire Name</mat-label>
+                  <mat-label>Questions</mat-label>
                   <input matInput autocomplete='no' type='text' required>
                 </mat-form-field>
               </div>
-              <div class='col-12'>
-                <mat-form-field class='w-100' appearance='fill'>
-                  <mat-label>Type</mat-label>
-                  <mat-select>
-                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
-                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
-                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
-                  </mat-select>
+            </div>
+            <div class='col-12'>
+              <div class='row m-0 mb-2'>
+                <mat-form-field class='w-100'>
+                  <mat-label>Description</mat-label>
+                  <textarea matInput
+                            placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
                 </mat-form-field>
-              </div>
-              <div class='col-12'>
-                <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
-                  scoring</h4></mat-checkbox>
-              </div>
-              <div class='col-12'>
-                <div class='row m-0 mt-4 mb-2'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Questions</mat-label>
-                    <input matInput autocomplete='no' type='text' required>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='col-12'>
-                <div class='row m-0 mb-2'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Description</mat-label>
-                    <textarea matInput
-                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='col-12'>
-                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
-                  class='text-muted m-0  ml-2'>Why are we
-                  asking ?</h4></mat-checkbox>
-              </div>
-              <div class='col-12'>
-                <div class='row m-0  mt-4 mb-2'>
-                  <mat-form-field class='w-100' *ngIf='showField'>
-                    <mat-label>Why are we asking</mat-label>
-                    <textarea matInput
-                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='col-12'>
-                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
-                  class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
-              </div>
-              <div class='col-12'>
-                <div class='row mt-4 mb-2'>
-                  <div class='col-3'><p class='text-muted'>POINTS</p></div>
-                  <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
-                </div>
-              </div>
-              <div class='col-12'>
-                <div class='row  mb-2'>
-                  <div class='col-3'>
-                    <mat-form-field class='w-100'>
-                      <input matInput autocomplete='no' type='text' required>
-                    </mat-form-field>
-                  </div>
-                  <div class='col-9'>
-
-                    <mat-form-field class='w-100'>
-                      <mat-label>Answer 1</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class='row  mb-2'>
-                  <div class='offset-3'>
-                  </div>
-                  <div class='col-9' *ngIf='showIcon'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Font Awesome Icon 6 Code</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
               </div>
             </div>
             <div class='col-12'>
-              <div class='row'>
-                <button mat-button>ADD ANSWER</button>
+              <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
+                class='text-muted m-0  ml-2'>Why are we
+                asking ?</h4></mat-checkbox>
+            </div>
+            <div class='col-12'>
+              <div class='row m-0  mt-4 mb-2'>
+                <mat-form-field class='w-100' *ngIf='showField'>
+                  <mat-label>Why are we asking</mat-label>
+                  <textarea matInput
+                            placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                </mat-form-field>
               </div>
             </div>
-          </mat-card>
-        </div>
+            <div class='col-12'>
+              <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
+                class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+            </div>
+            <div class='col-12'>
+              <div class='row mt-4 mb-2'>
+                <div class='col-3'><p class='text-muted'>POINTS</p></div>
+                <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row  mb-2'>
+                <div class='col-3'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+
+                  <mat-form-field class='w-100'>
+                    <mat-label>Answer 1</mat-label>
+                    <input matInput autocomplete='no' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row  mb-2'>
+                <div class='offset-3'>
+                </div>
+                <div class='col-9' *ngIf='showIcon'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Font Awesome Icon 6 Code</mat-label>
+                    <input matInput autocomplete='no' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='col-12'>
+            <div class='row'>
+              <button mat-button>ADD ANSWER</button>
+            </div>
+          </div>
+        </mat-card>
+      </div>
 
       <!--    Slider type-->
       <ng-template>
@@ -259,11 +259,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
-                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
-                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
+                    <mat-option [value]=choiceType.MULITPLE_CHOICE>{{choiceType.MULITPLE_CHOICE}}</mat-option>
+                    <mat-option [value]=choiceType.IMAGE_SELECT>{{choiceType.IMAGE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.SLIDER>{{choiceType.SLIDER}}</mat-option>
+                    <mat-option [value]=choiceType.VERTICLE_SELECT>{{choiceType.VERTICLE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.YES_NO>{{choiceType.YES_NO}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -406,11 +406,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
-                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
-                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
+                    <mat-option [value]=choiceType.MULITPLE_CHOICE>{{choiceType.MULITPLE_CHOICE}}</mat-option>
+                    <mat-option [value]=choiceType.IMAGE_SELECT>{{choiceType.IMAGE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.SLIDER>{{choiceType.SLIDER}}</mat-option>
+                    <mat-option [value]=choiceType.VERTICLE_SELECT>{{choiceType.VERTICLE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.YES_NO>{{choiceType.YES_NO}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -541,11 +541,11 @@
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
-                    <mat-option value='{{choiceType.Multiple_Choice}}}'>{{choiceType.Multiple_Choice}}</mat-option>
-                    <mat-option value='two'>{{choiceType.Image_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Slider}}'>{{choiceType.Slider}}</mat-option>
-                    <mat-option value='{{choiceType.Vertical_Select}}'>{{choiceType.Vertical_Select}}</mat-option>
-                    <mat-option value='{{choiceType.Yes_No}}'>{{choiceType.Yes_No}}</mat-option>
+                    <mat-option [value]=choiceType.MULITPLE_CHOICE>{{choiceType.MULITPLE_CHOICE}}</mat-option>
+                    <mat-option [value]=choiceType.IMAGE_SELECT>{{choiceType.IMAGE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.SLIDER>{{choiceType.SLIDER}}</mat-option>
+                    <mat-option [value]=choiceType.VERTICLE_SELECT>{{choiceType.VERTICLE_SELECT}}</mat-option>
+                    <mat-option [value]=choiceType.YES_NO>{{choiceType.YES_NO}}</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -632,6 +632,3 @@
     </div>
   </div>
 </div>
-
-
-
