--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -1,7 +1,6 @@
 <div class='p-4'>
-
   <div class='container-fluid p-0'>
-    <div class='row mb-4 '>
+    <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
         <button
           mat-stroked-button type='button'
@@ -19,9 +18,9 @@
     </div>
   </div>
   <div class='container-fluid p-0'>
-    <div class='row  justify-content-between'>
-      <div class='col-lg-5 mb-4'>
-        <div class='container-fluid p-0 m-0'>
+    <div class='row justify-content-between'>
+      <div class='col-lg-5'>
+        <div class='container-fluid p-0 m-0 h-100'>
           <div class='row'>
             <div class='col-12'>
               <mat-form-field class='w-100'>
@@ -32,75 +31,87 @@
           </div>
           <div class='row'>
             <div class='col-12'>
-              <mat-card>
-                <div class='row  '>
-                  <div class='col-12'>
-                    <div class='d-flex justify-content-between'>
-                      <h1>Questions</h1>
-                      <mat-slide-toggle color='primary' [(ngModel)]='showSentiment' labelPosition='before'><h4
-                        class='m-0 text-muted mr-2'>Scoring</h4></mat-slide-toggle>
-                    </div>
+              <mat-card >
+                <mat-card-title>
+                  <div class='d-flex justify-content-between align-items-center mb-3'>
+                    <h3 class='mat-h3 mb-0 font-sf-pro'>Questions</h3>
+                    <mat-slide-toggle color='primary' [(ngModel)]='showSentiment' labelPosition='before'>
+                      <h3 class='mat-h3 text-muted mb-0 mr-4 font-calibri font-weight-normal'>Scoring</h3>
+                    </mat-slide-toggle>
                   </div>
-                </div>
+                </mat-card-title>
                 <mat-divider></mat-divider>
-                <div class='row  mt-4'>
-                  <div class='col-12'>
-                    <mat-card class='question-card'>
-                      <div class='d-flex justify-content-between'>
-                        <div>
-                          <h3>Question </h3>
-                          <mat-card-subtitle></mat-card-subtitle>
-                          <p>How many Times</p>
-                        </div>
-                        <div>
-                          <button mat-icon-button [matMenuTriggerFor]='menu'
-                                  aria-label='Example icon-button with a menu'>
-                            <mat-icon>more_vert</mat-icon>
-                          </button>
-                          <mat-menu #menu='matMenu'>
-                            <button mat-menu-item>
-                              <mat-icon>people_alt</mat-icon>
-                              <span>Option</span>
+                <mat-card-content>
+                  <ng-template ngFor [ngForOf]='questionsFormArray.controls' let-existingQuestion let-i='index'>
+                    <div class='pt-3'>
+                      <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
+                        <div class='d-flex align-items-center justify-content-between'>
+                          <h4 class='mat-h4 mb-0 font-weight-bold'>Question {{i + 1}}</h4>
+                          <div>
+                            <button mat-icon-button [matMenuTriggerFor]='menu'
+                                    aria-label='Example icon-button with a menu'>
+                              <mat-icon>more_vert</mat-icon>
                             </button>
-                          </mat-menu>
+                            <mat-menu #menu='matMenu'>
+                              <button mat-menu-item>
+                                <mat-icon>people_alt</mat-icon>
+                                <span>Option</span>
+                              </button>
+                            </mat-menu>
+                          </div>
                         </div>
-                      </div>
-                    </mat-card>
-                  </div>
-                </div>
-                <div class='row m-0 mt-4'>
-                  <button color='primary' [matMenuTriggerFor]='add' class='text-left' mat-flat-button type='button'>
+                        <mat-card-content>
+                          <p class='font-calibri'>
+                            {{questionFormGroup(i).controls.name.value}}
+                          </p>
+                        </mat-card-content>
+                      </mat-card>
+                    </div>
+                  </ng-template>
+                </mat-card-content>
+                <mat-card-actions>
+                  <button color='accent' [matMenuTriggerFor]='add' class='w-100' mat-flat-button
+                          type='button'>
                     <mat-icon class='mr-2 mb-1'>add</mat-icon>
                     Add
                   </button>
                   <mat-menu #add='matMenu' class='mt-2'>
-                    <button mat-menu-item>
-                      <span>Multiple Choice</span>
-                    </button>
-                    <button mat-menu-item>
-                      <span>Image Select</span>
-                    </button>
-                    <button mat-menu-item>
-                      <span>Yes/No</span>
-                    </button>
-                    <button mat-menu-item>
-                      <span>Slider</span>
-                    </button>
-                    <button mat-menu-item>
-                      <span>Vertical select</span>
+                    <button (click)='triggerQuestionType(type)' *ngFor='let type of choiceTypeIte' mat-menu-item>
+                      <span>{{type}}</span>
                     </button>
                   </mat-menu>
-                </div>
+                </mat-card-actions>
+
               </mat-card>
             </div>
           </div>
-
         </div>
       </div>
-      <div class='col-lg-7 mb-4 '>
-        <hidden-innovation-questionnaire-questions>
-
-        </hidden-innovation-questionnaire-questions>
+      <div class='col-lg-7'>
+        <div class='container-fluid p-0'>
+          <div class='row mb-3'>
+            <div class='col-12 mt-1 mb-3 d-flex align-items-center justify-content-end'>
+              <h5 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>TOTAL POINTS</h5>
+              <div class='d-flex align-items-center ml-5 mr-3'>
+                <div class='d-flex align-items-center'>
+                  <mat-icon color='primary' class='mr-3 text-color__success'>sentiment_satisfied_alt</mat-icon>
+                  <h2 class='m-0 text-color__success'>6</h2>
+                </div>
+                <div class='d-flex align-items-center ml-5'>
+                  <mat-icon color='primary' class='mr-3 text-color__error'>sentiment_very_dissatisfied</mat-icon>
+                  <h2 class='m-0 text-color__error'>-3</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='row pt-1  justify-content-between'>
+            <!--      Multiple Choice-->
+            <div class='col-12'>
+              <hidden-innovation-questionnaire-question-form
+              ></hidden-innovation-questionnaire-question-form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
