--- a/apps/optimal-human/src/app/app.component.scss
+++ b/apps/optimal-human/src/app/app.component.scss
@@ -87,6 +87,7 @@ mat-list-item {
 main {
   position: relative;
   z-index: 0;
+  background: #FBFCFD;
 
   &.internal_over-flow {
     height: calc(100vh - 80px);
