--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.scss
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.scss
@@ -1,29 +1,21 @@
-.sentiment
-{
-  margin-right: 20px;
-}
-
-.icon
-{
-  &--success
-  {
+.icon {
+  &--success {
     color: #00C853;
   }
-  &--error
-  {
+
+  &--error {
     color: #E53935;
   }
 }
-.question-card
-{
-  transition: all ease 0.2s;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
-  &:hover{
+
+.question-card {
+  transition: background-color ease 0.3s;
+
+  &:hover {
     background-color: #F2F9FE;
   }
 }
 
-.skin-color
-{
+.skin-color {
   max-width: 56px;
 }
