--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -1,4 +1,4 @@
-<div class='p-4'>
+<div class='p-4' [formGroup]='questionnaire' (ngSubmit)='submit()'>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -23,19 +23,19 @@
         <div class='container-fluid p-0 m-0 h-100'>
           <div class='row'>
             <div class='col-12'>
-              <mat-form-field class='w-100'>
-                <mat-label>Questionnaire Name</mat-label>
-                <input matInput autocomplete='no' type='text'>
-              </mat-form-field>
+              <hidden-innovation-common-form-field
+                label='Questionnaire Name'
+                controlPath='name'
+              ></hidden-innovation-common-form-field>
             </div>
           </div>
           <div class='row'>
             <div class='col-12'>
-              <mat-card >
+              <mat-card>
                 <mat-card-title>
                   <div class='d-flex justify-content-between align-items-center mb-3'>
                     <h3 class='mat-h3 mb-0 font-sf-pro'>Questions</h3>
-                    <mat-slide-toggle color='primary' [(ngModel)]='showSentiment' labelPosition='before'>
+                    <mat-slide-toggle color='primary' formControlName='isScoring' labelPosition='before'>
                       <h3 class='mat-h3 text-muted mb-0 mr-4 font-calibri font-weight-normal'>Scoring</h3>
                     </mat-slide-toggle>
                   </div>
@@ -44,12 +44,12 @@
                 <mat-card-content>
                   <ng-template ngFor [ngForOf]='questionsFormArray.controls' let-existingQuestion let-i='index'>
                     <div class='pt-3'>
-                      <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
+                      <mat-card class='question-card mat-elevation-z3 pt-1 pr-1 cursor__pointer'
+                                (click)='activeQuestion = i'>
                         <div class='d-flex align-items-center justify-content-between'>
                           <h4 class='mat-h4 mb-0 font-weight-bold'>Question {{i + 1}}</h4>
                           <div>
-                            <button mat-icon-button [matMenuTriggerFor]='menu'
-                                    aria-label='Example icon-button with a menu'>
+                            <button mat-icon-button [matMenuTriggerFor]='menu'>
                               <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu='matMenu'>
@@ -89,28 +89,33 @@
       </div>
       <div class='col-lg-7'>
         <div class='container-fluid p-0'>
-          <div class='row mb-3'>
+          <div class='row mb-3' *ngIf='questionnaire.controls.isScoring.value'>
             <div class='col-12 mt-1 mb-3 d-flex align-items-center justify-content-end'>
               <h5 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>TOTAL POINTS</h5>
               <div class='d-flex align-items-center ml-5 mr-3'>
                 <div class='d-flex align-items-center'>
                   <mat-icon color='primary' class='mr-3 text-color__success'>sentiment_satisfied_alt</mat-icon>
-                  <h2 class='m-0 text-color__success'>6</h2>
+                  <h2 class='m-0 text-color__success'>{{minMaxPoints()?.max}}</h2>
                 </div>
                 <div class='d-flex align-items-center ml-5'>
                   <mat-icon color='primary' class='mr-3 text-color__error'>sentiment_very_dissatisfied</mat-icon>
-                  <h2 class='m-0 text-color__error'>-3</h2>
+                  <h2 class='m-0 text-color__error'>{{minMaxPoints()?.min}}</h2>
                 </div>
               </div>
             </div>
           </div>
-          <div class='row pt-1  justify-content-between'>
-            <!--      Multiple Choice-->
-            <div class='col-12'>
-              <hidden-innovation-questionnaire-question-form
-              ></hidden-innovation-questionnaire-question-form>
+          <ng-template ngFor [ngForOf]='questionsFormArray.controls' let-existingQuestion let-i='index'>
+            <div class='row pt-1' *ngIf='i === activeQuestion'>
+              <div class='col-12'>
+                <hidden-innovation-questionnaire-question-form
+                  _groupName='{{activeQuestion}}'
+                  [isScoring]='questionnaire.controls.isScoring.value'
+                  [type]='questionFormGroup(activeQuestion).controls.questionType.value'
+                  (addAnswer)='addAnswer($event)'>
+                </hidden-innovation-questionnaire-question-form>
+              </div>
             </div>
-          </div>
+          </ng-template>
         </div>
       </div>
     </div>
