--- a/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
+++ b/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
@@ -1,121 +1,114 @@
 <mat-card>
   <mat-card-title>
     <div class='d-flex justify-content-between align-items-center mb-3 '>
-      <h3 class='mat-h3 mb-0 font-sf-pro'>Question 1</h3>
+      <h3 class='mat-h3 mb-0 font-sf-pro'>
+        Question {{questionNumber}}
+      </h3>
       <div class='d-flex align-items-center '>
-        <div class='d-flex align-items-center'>
-          <mat-icon color='primary' class='mr-3 text-color__success'>sentiment_satisfied_alt</mat-icon>
-          <h2 class='m-0 text-color__success'>6</h2>
-        </div>
-        <div class='d-flex align-items-center ml-5'>
-          <mat-icon color='primary' class='mr-3 text-color__error'>sentiment_very_dissatisfied</mat-icon>
-          <h2 class='m-0 text-color__error'>-3</h2>
-        </div>
+        <ng-template [ngIf]='isScoring'>
+          <div class='d-flex align-items-center'>
+            <mat-icon color='primary' class='mr-3 text-color__success'>sentiment_satisfied_alt</mat-icon>
+            <h2 class='m-0 text-color__success'>{{questionMinMaxPoints?.max}}</h2>
+          </div>
+          <div class='d-flex align-items-center ml-5'>
+            <mat-icon color='primary' class='mr-3 text-color__error'>sentiment_very_dissatisfied</mat-icon>
+            <h2 class='m-0 text-color__error'>{{questionMinMaxPoints?.min}}</h2>
+          </div>
+        </ng-template>
       </div>
     </div>
   </mat-card-title>
   <mat-divider></mat-divider>
-  <mat-card-content>
-    <div class='container-fluid p-0 pt-3'>
+  <mat-card-content class='mb-0'>
+    <div *ngIf='question' class='container-fluid p-0 pt-3'
+         [formGroup]='question'>
       <div class='row'>
-        <div class='col-12'>
-          <mat-form-field class='w-100'>
-            <mat-label>Questionnaire Name</mat-label>
-            <input matInput autocomplete='no' type='text' required>
-          </mat-form-field>
-        </div>
         <div class='col-12'>
           <mat-form-field class='w-100' appearance='fill'>
             <mat-label>Type</mat-label>
-            <mat-select>
-              <mat-option [value]=choiceType.MULITPLE_CHOICE>{{choiceType.MULITPLE_CHOICE}}</mat-option>
-              <mat-option [value]=choiceType.IMAGE_SELECT>{{choiceType.IMAGE_SELECT}}</mat-option>
-              <mat-option [value]=choiceType.SLIDER>{{choiceType.SLIDER}}</mat-option>
-              <mat-option [value]=choiceType.VERTICLE_SELECT>{{choiceType.VERTICLE_SELECT}}</mat-option>
-              <mat-option [value]=choiceType.YES_NO>{{choiceType.YES_NO}}</mat-option>
+            <mat-select formControlName='questionType'>
+              <mat-option [value]=type  *ngFor='let type of choiceTypeIte' >{{type}}</mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
-        <div class='col-12'>
-          <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit
-            From
-            scoring</h4></mat-checkbox>
-        </div>
-        <div class='col-12'>
-          <div class='row m-0 mt-4 mb-2'>
-            <mat-form-field class='w-100'>
-              <mat-label>Questions</mat-label>
-              <input matInput autocomplete='no' type='text' required>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class='col-12'>
-          <div class='row m-0 mb-2'>
-            <mat-form-field class='w-100'>
-              <mat-label>Description</mat-label>
-              <textarea matInput
-                        placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class='col-12'>
-          <mat-checkbox class='example-margin mt-2' color='primary'><h4
-            class='text-muted m-0  ml-2'>Why are we
-            asking ?</h4></mat-checkbox>
-        </div>
-        <div class='col-12'>
-          <div class='row m-0  mt-4 mb-2'>
-            <mat-form-field class='w-100' *ngIf='showField'>
-              <mat-label>Why are we asking</mat-label>
-              <textarea matInput
-                        placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class='col-12'>
-          <mat-checkbox class='example-margin mt-2' color='primary'><h4
-            class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
-        </div>
-        <div class='col-12'>
-          <div class='row mt-4 mb-2'>
-            <div class='col-3'><p class='text-muted'>POINTS</p></div>
-            <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
-          </div>
-        </div>
-        <div class='col-12'>
-          <div class='row  mb-2'>
-            <div class='col-3'>
-              <mat-form-field class='w-100'>
-                <input matInput autocomplete='no' type='text' required>
-              </mat-form-field>
-            </div>
-            <div class='col-9'>
-
-              <mat-form-field class='w-100'>
-                <mat-label>Answer 1</mat-label>
-                <input matInput autocomplete='no' type='text'>
-              </mat-form-field>
-            </div>
-          </div>
-          <div class='row  mb-2'>
-            <div class='offset-3'>
-            </div>
-            <div class='col-9' *ngIf='showIcon'>
-              <mat-form-field class='w-100'>
-                <mat-label>Font Awesome Icon 6 Code</mat-label>
-                <input matInput autocomplete='no' type='text'>
-              </mat-form-field>
-            </div>
-          </div>
         </div>
       </div>
       <div class='row'>
         <div class='col-12'>
-          <button mat-button>ADD ANSWER</button>
+          <hidden-innovation-common-form-field
+            label='Question'
+            controlPath='name'
+          ></hidden-innovation-common-form-field>
         </div>
       </div>
+      <div class='row'>
+        <div class='col-12'>
+          <mat-form-field class='w-100'>
+            <mat-label>Description</mat-label>
+            <textarea matInput formControlName='description'></textarea>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class='row' [ngClass]='{"mb-3": !!question.controls.whyAreWeAsking.value}'>
+        <div class='col-12 d-flex align-items-center'>
+          <mat-checkbox formControlName='whyAreWeAsking' color='primary'>
+            <h4 class='text-muted m-0 ml-2'>
+              Why are we asking?</h4>
+          </mat-checkbox>
+        </div>
+      </div>
+      <div class='row' *ngIf='!!question.controls.whyAreWeAsking.value'>
+        <div class='col-12 d-flex align-items-center'>
+          <mat-form-field class='w-100'>
+            <mat-label>Why are we asking</mat-label>
+            <textarea formControlName='whyAreWeAskingQuestion' matInput></textarea>
+          </mat-form-field>
+        </div>
+      </div>
+      <ng-template [ngIf]='question.controls.answer?.value?.length && question.controls.questionType.value === choiceType.MULITPLE_CHOICE'>
+        <div class='row' [ngClass]='{"mt-3": !question?.controls?.whyAreWeAsking?.value}'>
+          <div class='col-12'>
+            <mat-checkbox formControlName='showIcon' color='primary'>
+              <h4 class='text-muted m-0 ml-2'>Icons</h4>
+            </mat-checkbox>
+          </div>
+        </div>
+        <div class='row my-3'>
+          <div class='col-3'>
+            <h5 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>POINTS</h5>
+          </div>
+          <div class='col-9'>
+            <h5 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>ANSWERS</h5>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template ngFor [ngForOf]='answersArray.controls' let-i='index'>
+        <div class='row' [formGroup]='multipleChoiceAnswerGroup(i)'>
+          <div class='col-3'>
+            <hidden-innovation-common-form-field
+              [errorMessage]='formValidationService.pointsValidationMessage'
+              controlPath='point'
+            ></hidden-innovation-common-form-field>
+          </div>
+          <div class='col-9'>
+            <hidden-innovation-common-form-field
+              label='Answer {{i + 1}}'
+              controlPath='name'
+            ></hidden-innovation-common-form-field>
+          </div>
+          <div class='col-3'></div>
+          <div class='col-9' *ngIf='!!question.controls.showIcon?.value && question.controls.questionType.value === choiceType.MULITPLE_CHOICE'>
+            <hidden-innovation-common-form-field
+              label='Font Awesome Icon 6 Code'
+              controlPath='iconName'
+            ></hidden-innovation-common-form-field>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)='addNewAnswer()'>ADD ANSWER</button>
+  </mat-card-actions>
 </mat-card>
 
 <!--Slider Type-->
