--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -1,12 +1,11 @@
 <div class='container-fluid p-0'>
   <div class='row mb-4'>
     <div class='col-6'>
-      <mat-card>
-
+      <mat-card class='pl-1'>
         <div class='container-fluid p-0'>
           <div class='row'>
             <div class='col-12'>
-              <div class='d-flex align-items-center mb-3'>
+              <div class='d-flex align-items-center mb-3 pl-2'>
                 <mat-icon color='primary' class='mr-1 card-icon'>female</mat-icon>
                 <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Female Age Group</h4>
               </div>
@@ -29,11 +28,11 @@
       </mat-card>
     </div>
     <div class='col-6'>
-      <mat-card>
+      <mat-card class='pl-2'>
         <div class='container-fluid p-0'>
           <div class='row'>
             <div class='col-12'>
-              <div class='d-flex align-items-center mb-3'>
+              <div class='d-flex align-items-center mb-3 pl-2'>
                 <mat-icon color='primary' class='mr-1 card-icon'>male</mat-icon>
                 <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Male Age Group</h4>
               </div>
