feat(OH-297-create-questionnaire): Add create questionnaire feature along with update form field and image upload validations

--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -397,6 +397,11 @@ table.mat-table {
     background: #FCE7E7 !important;
     color: #ec795f !important;
   }
+
+  &--primary {
+    color: var(--primary-darker-color) !important;
+    background-color: var(--accent-color) !important;
+  }
 }
 
 .cursor {
