--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -1,17 +1,19 @@
-<div class='p-4' [formGroup]='questionnaire' (ngSubmit)='submit()'>
+<form class='p-4' [formGroup]='questionnaire' (ngSubmit)='submit()'>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
         <button
+          [disabled]='store.isActing$ | async'
           mat-stroked-button type='button'
-          [routerLink]="['dashboard']"
+          [routerLink]="['/questionnaire']"
           class='ml-3'>
           Cancel
         </button>
         <button
+          [disabled]='store.isActing$ | async'
           mat-flat-button
           class='ml-3'
-          color='primary' type='submit'>
+          color='primary' type="submit">
           Save
         </button>
       </div>
@@ -44,8 +46,7 @@
                 <mat-card-content>
                   <ng-template ngFor [ngForOf]='questionsFormArray.controls' let-existingQuestion let-i='index'>
                     <div class='pt-3'>
-                      <mat-card class='question-card mat-elevation-z3 pt-1 pr-1 cursor__pointer'
-                                (click)='activeQuestion = i'>
+                      <mat-card class='question-card mat-elevation-z3 pt-1 pr-1'>
                         <div class='d-flex align-items-center justify-content-between'>
                           <h4 class='mat-h4 mb-0 font-weight-bold'>Question {{i + 1}}</h4>
                           <div>
@@ -53,9 +54,13 @@
                               <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu='matMenu'>
-                              <button mat-menu-item>
-                                <mat-icon>people_alt</mat-icon>
-                                <span>Option</span>
+                              <button (click)='activeQuestion = i' mat-menu-item>
+                                <mat-icon>create</mat-icon>
+                                <span>Edit</span>
+                              </button>
+                              <button (click)='removeQuestion(i)' mat-menu-item>
+                                <mat-icon>delete</mat-icon>
+                                <span>Delete</span>
                               </button>
                             </mat-menu>
                           </div>
@@ -120,4 +125,4 @@
       </div>
     </div>
   </div>
-</div>
+</form>
