--- a/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
+++ b/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
@@ -1,6 +1,7 @@
 <mat-form-field class='w-100'>
   <mat-label>{{label}}</mat-label>
-  <input matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly' type='text' [placeholder]='placeholder || label'
+  <input matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly' type='text'
+         [placeholder]='placeholder || label'
          [formControl]='control'>
   <mat-error
     *ngIf='control.errors?.required || control.errors?.notEmpty'>
@@ -26,7 +27,6 @@
   <mat-error
     *ngIf='control.errors?.email'>{{errorMessage.invalid}}</mat-error>
   <mat-error
-    *ngIf='control.errors?.alphaNumeric'>Must not contain any special character or
-    white spaces.
+    *ngIf='control.errors?.alphaNumeric'>Must not contain any special character.
   </mat-error>
 </mat-form-field>
