--- a/libs/tags/tags/src/lib/tags.component.html
+++ b/libs/tags/tags/src/lib/tags.component.html
@@ -4,7 +4,17 @@
       <div class='col-3'>
       </div>
       <div class='col d-flex align-items-center justify-content-end'>
-        <mat-spinner [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+        <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+        <button mat-flat-button color='primary' class='ml-2' [matMenuTriggerFor]='tagMenu'>
+          <mat-icon class='mr-2'>add</mat-icon>
+          {{"New Tag"}}
+        </button>
+        <mat-menu #tagMenu='matMenu'>
+          <button type='button' (click)='openCreateTagDialog(type)' *ngFor='let type of tagTypeIte'
+                  mat-menu-item>
+            <span>{{type | replaceUnderscore | titlecase}}</span>
+          </button>
+        </mat-menu>
       </div>
     </div>
   </div>
@@ -13,7 +23,7 @@
     <div class='container-fluid p-0'>
       <div class='row'>
         <div class='col-12'>
-          <table mat-table [dataSource]='tags' class='w-100'>
+          <table mat-table [dataSource]='tags' class='w-100' [trackBy]='trackById'>
             <ng-container matColumnDef='name'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.NAME | titlecase}}</th>
               <td mat-cell *matCellDef='let element'
@@ -22,17 +32,38 @@
 
             <ng-container matColumnDef='type'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.TYPE | titlecase}}</th>
-              <td mat-cell *matCellDef='let element'> {{element.tagType || '--'}}  </td>
+              <td mat-cell
+                  *matCellDef='let element'> {{(element.tagType | replaceUnderscore | titlecase) || '--'}}  </td>
             </ng-container>
 
             <ng-container matColumnDef='category'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.CATEGORY | titlecase}}</th>
-              <td mat-cell *matCellDef='let element'> {{element.categoryName || '--'}}  </td>
+              <td mat-cell *matCellDef='let element'> {{(element.categoryName | titlecase) || '--'}}  </td>
             </ng-container>
 
             <ng-container matColumnDef='date_modified'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}</th>
               <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}  </td>
+            </ng-container>
+
+            <ng-container matColumnDef='action'>
+              <th mat-header-cell *matHeaderCellDef
+                  [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+              <td mat-cell *matCellDef='let row'>
+                <button mat-icon-button [matMenuTriggerFor]='userListMenu'>
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #userListMenu='matMenu'>
+                  <button mat-menu-item (click)='openUpdateDialog(row)'>
+                    <mat-icon>create</mat-icon>
+                    <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
+                  </button>
+                  <button (click)='store.deleteTag(row.id, pageSize, pageIndex)' mat-menu-item>
+                    <mat-icon>delete</mat-icon>
+                    <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
+                  </button>
+                </mat-menu>
+              </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
